--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: The Trustworthy AI Workshop
 preposition: at
 description: >-
-  @IJCAI 2024
+  @ 2024 International Joint Conference on Artificial Intelligence (IJCAI)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://example.com" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://trustaiijcai.github.io/" # the base hostname & protocol for your site, e.g. https://example.com
 
 # theme: jekyll-theme-conference
 remote_theme: "DigitaleGesellschaft/jekyll-theme-conference@v3.6.5"
