--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -42,7 +42,7 @@ en:
   speaker:
     overview: Speakers
     title: Speaker
-    talks: Talks at this conference
+    talks: Talks at the workshop
   talk:
     overview: Talks
     title: Talk
