--- a/_data/program.yml
+++ b/_data/program.yml
@@ -11,6 +11,9 @@ days:
       - name: Title TBA
         time_start: '12:45'
         time_end: '13:30'
+      - name: Title TBA
+        time_start: '15:45'
+        time_end: '16:30'
 
   # - name: Room B
   #   talks:
