--- a/_config.yml
+++ b/_config.yml
@@ -76,8 +76,8 @@ conference:
         relative_url: /speakers/
       - name: Talks
         relative_url: /talks/
-      # - name: Program
-      #   relative_url: /program/
+      - name: Program
+        relative_url: /program/
       # - name: Location
       #   relative_url: /location/
       - name: Editions
@@ -110,8 +110,8 @@ conference:
         relative_url: /speakers/
       - name: Talks
         relative_url: /talks/
-      # - name: Program
-      #   relative_url: /program/
+      - name: Program
+        relative_url: /program/
       # - name: How to get there
       #   relative_url: /location/
       # - name: Tickets
@@ -124,7 +124,7 @@ conference:
       color: primary
       main_only: true
       text: |
-        August 03-09, 2024, Jeju Island, South Korea.
+        August 3, 2024, Jeju Island, South Korea.
     # - text: This is just some random content for demonstration purposes.
     #   color: warning
     #   pages_only: true
@@ -153,7 +153,7 @@ conference:
         color: success
 
     # Hide icons on talk overview page
-    hide_icons: true
+    hide_icons: false
 
   speakers:
     # Show first and last name
