--- a/_data/program.yml
+++ b/_data/program.yml
@@ -5,9 +5,30 @@ days:
   rooms:
   - name: Main Room
     talks:
+      - name: Opening Remark
+        time_start: '09:00'
+        time_end: '09:15'
       - name: Exploring Safety Risks in Large Language Models and Generative AI
-        time_start: '12:00'
-        time_end: '12:45'
+        time_start: '09:15'
+        time_end: '09:50'
+      - name: Contributed Talk 1
+        time_start: '09:50'
+        time_end: '10:00'
+      - name: Contributed Talk 2
+        time_start: '10:00'
+        time_end: '10:10'
+      - name: Contributed Talk 3
+        time_start: '10:10'
+        time_end: '10:20'
+      - name: Coffee Break
+        time_start: '10:20'
+        time_end: '10:40'
+      - name: Coffee Break
+        time_start: '10:20'
+        time_end: '10:40'
+      - name: Coffee Break
+        time_start: '10:20'
+        time_end: '10:40'
       - name: Trustworthy AI for Sustainability
         time_start: '12:45'
         time_end: '13:30'
@@ -15,14 +36,14 @@ days:
         time_start: '15:45'
         time_end: '16:30'
 
-  - name: Room B
-    talks:
-      - name: Arcu Non Odio
-        time_start: '12:00'
-        time_end: '13:00'
+  # - name: Room B
+  #   talks:
+  #     - name: Arcu Non Odio
+  #       time_start: '12:00'
+  #       time_end: '13:00'
 
-  - name: Room C
-    talks:
-      - name: Eu Nisl Nunc Mi Ipsum Faucibus
-        time_start: '13:30'
-        time_end: '14:30'
+  # - name: Room C
+  #   talks:
+  #     - name: Eu Nisl Nunc Mi Ipsum Faucibus
+  #       time_start: '13:30'
+  #       time_end: '14:30'
