--- a/_data/program.yml
+++ b/_data/program.yml
@@ -5,7 +5,7 @@ days:
   rooms:
   - name: Main Room
     talks:
-      - name: Opening Remark
+      - name: Opening Remarks
         time_start: '09:00'
         time_end: '09:15'
       - name: Exploring Safety Risks in Large Language Models and Generative AI
@@ -45,7 +45,7 @@ days:
         time_start: '16:00'
         time_end: '16:30'
       - name: Contributed Talk 4
-        time_start: '16:30''
+        time_start: '16:30'
         time_end: '16:40'
       - name: Contributed Talk 5
         time_start: '16:40'
@@ -53,7 +53,7 @@ days:
       - name: Contributed Talk 6
         time_start: '16:50'
         time_end: '17:00'
-      - name: Title TBA
+      - name: Keynote 3 (Title TBA)
         time_start: '15:45'
         time_end: '16:30'
 
