--- a/_data/program.yml
+++ b/_data/program.yml
@@ -41,7 +41,7 @@ days:
       - name: Coffee Break
         time_start: '15:30'
         time_end: '16:00'
-      - name: Exploring Safety Risks in Large Language Models and Generative A
+      - name: Trustworthy AI for Sustainability
         time_start: '16:00'
         time_end: '16:30'
       - name: Contributed Talk 4
