--- a/_data/program.yml
+++ b/_data/program.yml
@@ -53,6 +53,9 @@ days:
       - name: Contributed Talk 6
         time_start: '16:50'
         time_end: '17:00'
+      - name: Closing Remarks
+        time_start: '17:00'
+        time_end: '17:10'
       # - name: Keynote 3 (Title TBA)
       #   time_start: '15:45'
       #   time_end: '16:30'
