--- a/_data/program.yml
+++ b/_data/program.yml
@@ -25,12 +25,12 @@ days:
         time_end: '10:50'
       - name: Poster Session I
         time_start: '10:50'
-        time_end: '11:30'
-      - name: Round Table/Networking Session
-        time_start: '11:30'
-        time_end: '12:30'
+        time_end: '12:00'
+      # - name: Round Table/Networking Session
+      #   time_start: '11:30'
+      #   time_end: '12:30'
       - name: Lunch
-        time_start: '12:30'
+        time_start: '12:00'
         time_end: '14:00'
       - name: Trustworthy Machine Learning from the Perspective of Individuals
         time_start: '14:00'
